fix(css): ajusta tamanhos de fonte para melhor responsividade e legibilidade

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -146,12 +146,7 @@ body {
   text-decoration: none;
   color: #fff;
   transition: color 0.3s ease;
-}
-
-@media (min-width: 769px) {
-  .nav-link {
-    font-size: clamp(1rem, 2.5vw, 1.5rem);
-  }
+  font-size: clamp(1rem, 3vw, 1.2rem);
 }
 
 .nav-link:hover {
@@ -194,7 +189,7 @@ body {
 .hero__title {
   position: relative;
   color: #fff;
-  font-size: clamp(1rem, 6vw, 3rem);
+  font-size: clamp(1rem, 4vw, 2.5rem);
   font-weight: 400;
   line-height: 1.4;
   padding-left: 1.25rem;
@@ -218,7 +213,7 @@ body {
 .about__title {
   padding-bottom: 0.9375rem;
   color: var(--cor-fonte-principal);
-  font-size: clamp(1rem, 2vw + 1rem, 3rem);
+  font-size: clamp(1rem, 3vw, 2rem);
 }
 
 .about__text {
@@ -245,7 +240,7 @@ body {
 }
 
 .about__subtitle {
-  font-size: clamp(0.875rem, 4vw, 1.6rem);
+  font-size: clamp(0.875rem, 2.5vw, 1.5rem);
   color: var(--cor-fonte-principal);
   padding-bottom: 1.875rem;
 }
@@ -268,7 +263,7 @@ body {
 
 .about__list-item {
   color: var(--cor-fonte-principal);
-  font-size: clamp(0.75rem, 3vw, 1.3rem);
+  font-size: clamp(0.75rem, 2.5vw, 1rem);
 }
 
 @media (min-width: 768px) {
@@ -292,7 +287,7 @@ body {
 }
 
 .specialties__title {
-  font-size: clamp(1rem, 3vw, 3rem);
+  font-size: clamp(1rem, 3vw, 2rem);
   color: var(--cor-fonte-principal);
   padding-bottom: 0.875rem;
 }
@@ -396,7 +391,7 @@ body {
 .contact__title {
   padding: 1.25rem 0;
   color: var(--cor-fonte-principal);
-  font-size: clamp(1.5rem, 3vw, 3rem);
+  font-size: clamp(1.5rem, 3vw, 2rem);
 }
 
 .contact__hours,
